# openldr_ce

./: .dependency-cruiser.cjs  .dockerignore  .env.example  .env.prod.example  .gitattributes  .gitignore  .npmrc  AUDIT-REPORT.md  DEPLOY-NOTES-mobile-responsive.md  DEPLOYMENT.md  DESIGN.md  DOCS-CHANGELOG.md  Dockerfile  OPENLDR_PRD.md  README.md  RELEASE.md  docker-compose.prod.yml  docker-compose.yml  openldr-ce-handoff.md  openldr-ce-phase1-phase2-status-and-loe.md  openldr-ce-prd-phase1.md  openldr-ce-prd-phase2.md  openldr-ce-prd-phase3.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.depcruise.json  turbo.json
.superpowers/sdd/: final-fix-report.md
apps/server/: Dockerfile  dev.mjs  eslint.config.mjs  package.json  tsup.config.ts
apps/studio/: Dockerfile  (+4 more)
deploy/: letsencrypt.sh
docs/: CLI-REFERENCE.md  CONFIGURATION.md  DEPLOYMENT.md  HTTP-API.md  OPERATOR-GUIDE.md  cdr-source-plugin-scoping.md  sync-live-test-phase1-lan.md
e2e/: README.md  global-setup.ts  package.json  playwright.config.ts  rubric.md  tsconfig.json
install/: development.ps1  development.sh  install.ps1  install.sh
reference-plugins/: .gitignore
samples/: hl7-oru-sample.hl7  lab-mapping.json  lab-sample.csv  lab-sample.xlsx  whonet-sample.sqlite
scripts/: README-amr-demo.md  amr-demo-revert.ts  amr-report-integration.ts  build-and-push.ps1  build-and-push.sh  build-dhis2-sink.mjs  build-test-sink.mjs  build-ui-reference.mjs  build-wasm-plugins.mjs  demographics-cutover-accept.ts  dhis2-live-acceptance.ts  dhis2-seed.mjs  dhis2.conf  init-keycloak-db.sql  init-target-db-mssql.sql  init-target-db-mysql.sql  init-target-db.sql  init.mjs  install-amr-workflows.ts  install-playwright-browsers.mjs  load-measure.mjs  make-docs-marketplace-bundle.ts  make-lab-sample.mjs  make-marketplace-bundle.ts  make-ucum-codesystem.mjs  make-whonet-sample.mjs  marketplace-live-acceptance.ts  mssql-live-acceptance.ts  mssql-matrix-accept.sh  mssql-reports-parity.ts  mysql-live-acceptance.ts  mysql-matrix-accept.sh  mysql-reports-parity-matrix.sh  mysql-reports-parity.ts  projection-live-acceptance.ts  reports-cutover-accept.ts  reports-golden-accept.ts  seed-amr-report-demo.ts  seed-dhis2-demo-connector.ts  seed-dhis2-demo-mapping.ts  (+18 more)
wasm/: Cargo.toml
wasm/dhis2-sink/: Cargo.toml
wasm/dhis2-sink/docs/: README.md
wasm/dhis2-sink/src/: client.rs  lib.rs  mapping.rs  summary.rs  tracker.rs  types.rs  uid.rs  value.rs
wasm/dhis2-sink/ui/: package.json  tsconfig.json  vitest.config.ts
wasm/dhis2-sink/ui/src/: App.tsx  i18n.test.ts  i18n.ts  main.test.tsx  main.tsx  sdk.ts  styles.css
wasm/dhis2-sink/ui/src/components/: Modal.tsx  Picker.test.tsx  Picker.tsx
wasm/dhis2-sink/ui/src/screens/: Dashboard.test.tsx  Dashboard.tsx  MappingEditor.test.tsx  MappingEditor.tsx  Mappings.test.tsx  Mappings.tsx  OrgUnits.test.tsx  OrgUnits.tsx  Pushes.test.tsx  Pushes.tsx  Schedules.test.tsx  Schedules.tsx
wasm/hl7v2/: Cargo.toml
wasm/hl7v2/src/: fuzz.rs  lib.rs  mapping.rs  parser.rs
wasm/openldr-plugin-sdk/: Cargo.toml  LICENSE
wasm/openldr-plugin-sdk/src/: fhir.rs  lib.rs
wasm/tabular/: Cargo.toml
wasm/tabular/src/: fuzz.rs  lib.rs  mapping.rs  reader.rs
wasm/test-sink/: Cargo.toml
wasm/test-sink/src/: lib.rs
wasm/whonet-sqlite/: Cargo.toml
wasm/whonet-sqlite/src/: lib.rs  mapping.rs
(+1339 files in other folders)
