[package]
name = "dhis2-sink"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "DHIS2 aggregate + tracker sink plugin (mapping, metadata, push)"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
openldr-plugin-sdk = { path = "../openldr-plugin-sdk" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"

[target.'cfg(target_arch = "wasm32")'.dependencies]
extism-pdk = "1"
base64 = "0.22"
