[package]
name = "hl7v2"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "HL7 v2 (ORU/ORM) -> FHIR R4 ingestion plugin"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
openldr-plugin-sdk = { path = "../openldr-plugin-sdk" }
extism-pdk = "1"
serde_json = "1"
