[package]
name = "openldr-plugin-sdk"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Permissive SDK for authoring OpenLDR WASM ingest plugins"

[lib]
crate-type = ["rlib"]

[dependencies]
serde_json = "1"

# extism-pdk links wasm host imports absent on the native host; restrict it to the wasm
# target so SDK consumers can run native `cargo test` without it (fhir/to_ndjson don't use it).
[target.'cfg(target_arch = "wasm32")'.dependencies]
extism-pdk = "1"
