[package]
name = "tabular"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "CSV/Excel -> FHIR R4 ingestion plugin (configurable mapping)"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
openldr-plugin-sdk = { path = "../openldr-plugin-sdk" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
calamine = "0.26"

[target.'cfg(target_arch = "wasm32")'.dependencies]
extism-pdk = "1"
