[package]
name = "test-sink"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Trivial sink plugin exercising the sink ABI (health_check + push_aggregate echo)"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
openldr-plugin-sdk = { path = "../openldr-plugin-sdk" }
serde_json = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
extism-pdk = "1"
